--- a/css/layout.css
+++ b/css/layout.css
@@ -201,7 +201,7 @@ body {
 
     .project-gallery-content {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+      grid-template-columns: repeat(2, 1fr);
       gap: 34px 16px;
     }
 
